<!--
 Copyright 2018 Andreas Leszczynski

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">Inventory App Stage 2</string>
    <string name="insert_fake_data">Insert Fake Data</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="detail_activity_title_new_item">Add A New Product</string>
    <string name="detail_activity_title_edit_item">Edit Product</string>
    <string name="unsaved_changes_dialog">Discard changes and quit?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog">Delete Product?</string>
    <string name="cancel">Cancel</string>
    <string name="detail_delete_product_error">Error deleting product</string>
    <string name="detail_delete_product_success">Product deleted</string>
    <string name="detail_insert_product_error">Error saving product</string>
    <string name="detail_insert_product_success">Product saved</string>
    <string name="detail_update_product_error">Error updating product</string>
    <string name="detail_product_updated">Product updated</string>
    <string name="no_products">There are no products in this list yet. Please add new inventory by
                    pressing the add button below. You have to provide the product name, product price,
                    product quantity, supplier name and supplier phone number.</string>
    <string name="sale">sale</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add_item">add item</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="order">Order</string>
    <string name="tel">tel:</string>
    <string name="provide_information">Please provide all necessary and correct information.</string>
    <string name="price">Price</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="valid_number">Please enter a valid number</string>

</resources>
