<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2018 Andreas Leszczynski

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <EditText
        android:id="@+id/edit_text_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/product_price"
            android:inputType="numberDecimal" />

    </LinearLayout>


    <EditText
        android:id="@+id/edit_text_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

        <EditText
            android:id="@+id/edit_text_change_product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/quantity"
            android:inputType="number" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_product_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_text_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier_phone_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/button_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>