<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2018 Andreas Leszczynski

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/text_view_product_name"
        style="@style/list"
        android:layout_width="match_parent"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            style="@style/list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/text_view_quantity"
            style="@style/list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            style="@style/list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/text_view_price"
            style="@style/list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>


    <Button
        android:id="@+id/listview_button_sale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/sale"
        android:textSize="@dimen/text_size_medium" />

</LinearLayout>